Bug 365124 - Regex capture groups for text fails beyond \9 (edit)

CHANGELOG: Support regular expressions replaces with captures > \9, e.g. \111

BUG: 365124