src/search/kateregexpsearch.cpp
@@ -563,10 +563,23 @@ QVector<KTextEditor::Range> KateRegExpSearch::search(
             case L'6':
             case L'7':
             case L'8':
-            case L'9':
-                out << ReplacementStream::cap(9 - (L'9' - text[input + 1].unicode()));
-                input += 2;
+            case L'9': {
+                // allow 1212124.... captures, see bug 365124 + testReplaceManyCapturesBug365124
+                int capture = 9 - (L'9' - text[input + 1].unicode());
+                int captureSize = 2;
+                while ((input + captureSize) < inputLen) {
+                    const ushort nextDigit = text[input + captureSize].unicode();
+                    if ((nextDigit >= L'0') && (nextDigit <= L'9')) {
+                        capture = (10 * capture) + (9 - (L'9' - nextDigit));
+                        ++captureSize;
+                        continue;
+                    }
+                    break;
+                }
+                out << ReplacementStream::cap(capture);
+                input += captureSize;
                 break;
+            }
 
             case L'E': // FALLTHROUGH
             case L'L': // FALLTHROUGH
